# tv-show-schedules

./: .gitignore  AGENTS.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pr-comment-test.yml
app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
migrations/: V1__init.sql  V2__default_data.sql  V3__show_watches_and_cape_fear.sql
tests/: conftest.py  test_integration.py  test_unit.py
