[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tv-show-schedules"
version = "0.1.0"
description = "FastAPI backend for tracking TV show release schedules"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "pydantic>=2.8",
  "email-validator>=2.2",
  "pydantic-settings>=2.3",
  "python-jose[cryptography]>=3.3",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "aiosqlite>=0.20",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: tests that require a database",
]

[tool.setuptools]
packages = ["app"]
